Fix overflowing 'レジェンドについて' item on banner

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,6 +1,6 @@
 .banner{
     width: 20%;
-    background-color: darkgray;
+    background-color: #ccc;
     margin: 10px;
     margin-top: 0px;
 }
